--- a/Study/karpov.courses/lesson1/exercise2.ipynb
+++ b/Study/karpov.courses/lesson1/exercise2.ipynb
@@ -15,7 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URL_BASE = 'https://raw.githubusercontent.com/pashkovsn/pashkov.sergei/refs/heads/main/Study/karpov.courses/lesson1/'\n",
+    "\n",
+    "def read_database(file_name):\n",
+    "    return pd.read_csv(os.path.join(URL_BASE, file_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +45,7 @@
    ],
    "source": [
     "try:\n",
-    "    df_sales_detail = pd.read_csv('2022-04-01T12_df_sales_detail.csv')\n",
+    "    df_sales_detail = read_database('2022-04-01T12_df_sales_detail.csv')\n",
     "    print(df_sales_detail.head())\n",
     "except FileNotFoundError as e:\n",
     "    print(f\"File not found: {e}\")"
@@ -41,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -54,13 +66,12 @@
        "Name: price, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# группировка данных\n",
     "df_sales_detail.groupby('good')['price'].sum().sort_values(ascending=False).head(3)"
    ]
   }
