--- a/Study/karpov.courses/lesson1/ex2.ipynb
+++ b/Study/karpov.courses/lesson1/ex2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URL_BASE = 'https://raw.githubusercontent.com/pashkovsn/pashkov.sergei/refs/heads/main/Study/karpov.courses/lesson1/'\n",
+    "\n",
+    "\n",
+    "def read_database(file_name):\n",
+    "    return pd.read_csv(os.path.join(URL_BASE, file_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -40,13 +53,13 @@
    ],
    "source": [
     "try:\n",
-    "    df_sales = pd.read_csv('2022-04-01T12_df_sales.csv')\n",
+    "    df_sales = read_database('2022-04-01T12_df_sales.csv')\n",
     "    print(df_sales.head())\n",
     "except FileNotFoundError as e:\n",
     "    print(f\"File not found: {e}\")\n",
     "\n",
     "try:\n",
-    "    df_web_logs = pd.read_csv('2022-04-01T12_df_web_logs.csv')\n",
+    "    df_web_logs = read_database('2022-04-01T12_df_web_logs.csv')\n",
     "    print(df_web_logs.head())\n",
     "except FileNotFoundError as e:\n",
     "    print(f\"File not found: {e}\")\n",
@@ -57,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +149,7 @@
        "4  697870    m 2022-02-03 23:53:12       66.8"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,91 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>session_start</th>\n",
-       "      <th>session_end</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>000096</td>\n",
-       "      <td>2022-03-04 10:58:01</td>\n",
-       "      <td>2022-03-04 11:15:44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>000096</td>\n",
-       "      <td>2022-03-22 12:57:54</td>\n",
-       "      <td>2022-03-22 13:15:53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0000d4</td>\n",
-       "      <td>2022-02-28 16:13:47</td>\n",
-       "      <td>2022-02-28 16:32:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0000d4</td>\n",
-       "      <td>2022-03-27 11:09:14</td>\n",
-       "      <td>2022-03-27 11:25:56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0000de</td>\n",
-       "      <td>2022-02-11 18:41:22</td>\n",
-       "      <td>2022-02-11 18:56:48</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  user_id       session_start         session_end\n",
-       "0  000096 2022-03-04 10:58:01 2022-03-04 11:15:44\n",
-       "1  000096 2022-03-22 12:57:54 2022-03-22 13:15:53\n",
-       "2  0000d4 2022-02-28 16:13:47 2022-02-28 16:32:00\n",
-       "3  0000d4 2022-03-27 11:09:14 2022-03-27 11:25:56\n",
-       "4  0000de 2022-02-11 18:41:22 2022-02-11 18:56:48"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_sessions = df_web_logs.groupby('user_id').apply(get_sessions).reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +278,7 @@
        "1  000096 2022-03-22 13:16:09 2022-03-22 12:57:54"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +316,7 @@
        "16.559328973854573"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
