--- a/Study/karpov.courses/lesson2/ex1.ipynb
+++ b/Study/karpov.courses/lesson2/ex1.ipynb
@@ -59,7 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URL_BASE = 'https://raw.githubusercontent.com/pashkovsn/pashkov.sergei/refs/heads/main/Study/karpov.courses/lesson2/'\n",
+    "\n",
+    "\n",
+    "def read_database(file_name):\n",
+    "    return pd.read_csv(os.path.join(URL_BASE, file_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +90,7 @@
    ],
    "source": [
     "try:\n",
-    "    df_users = pd.read_csv('experiment_users.csv')\n",
+    "    df_users = read_database('experiment_users.csv')\n",
     "    print(df_users.head())\n",
     "except FileNotFoundError as e:\n",
     "    print(f\"File not found: {e}\")"
